# kie_json

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  doxygen.conf
.github/workflows/: cmake.yml  codeql-analysis.yml  cppcheck.yml  msvc-code-analysis-action.yml  static_analyzation.yml
include/: kie_json.hpp
test/: CMakeLists.txt  field_test.cpp  from_json_test.cpp  to_json_test.cpp
